apt (0.8.16~exp13) UNRELEASED; urgency=low

  [ David Kalnischkies ]
  * apt-pkg/deb/dpkgpm.cc:
    - chroot if needed before dpkg --assert-multi-arch
    - ensure that dpkg binary doesn't have the chroot-directory prefixed
    - call dpkg --assert-multi-arch with execvp instead of execv
    - save the universe by not printing messages about apport if a package
      with this name is not installed (Closes: #619646)
  * apt-pkg/depcache.cc:
    - if a M-A:same package is marked for reinstall, mark all it's installed
      silbings for reinstallation as well (LP: #859188)
  * apt-pkg/contrib/configuration.cc:
    - do not stop parent transversal in FindDir if the value is empty
  * methods/http{s,}.cc:
    - if a file without an extension is requested send an 'Accept: text/*'
      header to avoid that the server chooses unsupported compressed files
      in a content-negotation attempt (Closes: #657560)
    - remove the arbitrary MAXLEN limit for response lines (Closes: #658346)
  * apt-pkg/aptconfiguration.cc:
    - chroot if needed before calling dpkg --print-foreign-architectures
    - ensure that architectures are not added multiple times
  * cmdline/apt-mark.cc:
    - detect if dpkg has multiarch support before calling --set-selections
    - correctly ignore already (un)hold packages
  * apt-pkg/cachefile.cc:
    - clean up lost atomic cachefiles with 'clean' (Closes: #650513)
  * apt-pkg/indexrecords.cc:
    - do not create empty Entries as a sideeffect of Lookup()
  * apt-pkg/acquire-item.cc:
    - drop support for i18n/Index file (introduced in 0.8.11) and use
      the Release file instead to get the Translations (Closes: #649314)
    - use pdiff for Translation-* files if available (Closes: #657902)
  * ftparchive/writer.cc:
    - add 'Translation-*' to the default patterns
  * cmdline/apt-get.cc:
    - if a package can't be removed as it is not installed, suggest to
      the user an (installed) multiarch silbing with 'Did you mean?'